--- a/resources/views/layouts/_footer.html
+++ b/resources/views/layouts/_footer.html
@@ -6,7 +6,7 @@
 		<div class="container d-flex flex-row">
 			<div class="flex-grow-1">
 				<span class="mr-1 text-secondary">&copy; Power By: </span>
-				<a href="https://dennie.wang" target="_blank" title="点击查看源码">BroQiang</a>
+				<a href="https://github.com/wangdengyi/dennie.wang" target="_blank" title="点击查看源码">denniewang</a>
 			</div>
 			<div class="text-secondary flex-grow-2">
 				{{if .cfg.ICP }}
