--- a/resources/views/posts/_right.html
+++ b/resources/views/posts/_right.html
@@ -6,9 +6,7 @@
 		</div>
 		<hr>
 		<small>
-			本博客已经由 go 重写，点击 <a href="/about">about</a> 了解更多，
-			点击 <a href="https://php-blog.broqiang.com" target="_blank">Laravel 版本博客</a>
-			可以查看旧版博客，如果你喜欢本博客，欢迎 <a href="https://dennie.wang" target="_blank">Star</a>
+			本博客基于broqiang编写部署，点击 <a href="https://github.com/broqiang/mdblog">github源码</a> 了解更多，
 			， 感谢！
 		</small>
 	</div>
@@ -35,11 +33,7 @@
 		<hr>
 		<small>
 			<ul class="list-unstyled">
-				<li class="mb-2"><a href="https://php-blog.broqiang.com">PHP 版本的博客（旧版）</a></li>
-				<li class="mb-2">
-					<a href="https://php-blog.broqiang.com/tutorials/linux-basic-tutorial">
-						Linux基础教程:boder-white</a></li>
-				<li class="mb-2"><a href="http://www.blockchant.cn">另外一个博客</a></li>
+				<li class="mb-2"><a href="http://www.broqiang.com">Broqiang的博客</a></li>
 			</ul>
 		</small>
 	</div>
